Disappearing active marker label in timeline window #34165

Closed
opened 2013-02-08 09:28:36 +01:00 by Michael P. · 4 comments

%%%--- Operating System, Graphics card ---
System: Windows 7 Professional 64 bit
ATI Radeon HD 5800

- Blender version with error, and version that worked ---

blender 2.66 testbuild 1 (r54336)
blender 2.65a (also has this "bug")

- Short description of error ---

Disappearing active marker label in timeline window. If the timeline window is scaled in height,
the active marker label is moved beyond the visible scope. Please see attached files for more.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  • open blender
  • create a new scene
  • go to timeline window
  • add a marker (ctrl + m)
  • select that marker so its active
  • scale (move) the hight of the timeline window
  • active label (white) dissapears

(Shameless) feature request:

  1. It would be also nice to have the "glow" effect of the active marker removed. Attached an image that shows the marker without glow.

  2. Would it be possible to get an option which displayes: marker with labels, only marker without labels and only active marker with label.

  3. Marker aligned exact with the frame line. It is slightly right of the frame line.

Thanks.%%%

%%%--- Operating System, Graphics card --- System: Windows 7 Professional 64 bit ATI Radeon HD 5800 - Blender version with error, and version that worked --- blender 2.66 testbuild 1 (r54336) blender 2.65a (also has this "bug") - Short description of error --- Disappearing active marker label in timeline window. If the timeline window is scaled in height, the active marker label is moved beyond the visible scope. Please see attached files for more. - Steps for others to reproduce the error (preferably based on attached .blend file) --- - open blender - create a new scene - go to timeline window - add a marker (ctrl + m) - select that marker so its active - scale (move) the hight of the timeline window - active label (white) dissapears (Shameless) feature request: 1. It would be also nice to have the "glow" effect of the active marker removed. Attached an image that shows the marker without glow. 2. Would it be possible to get an option which displayes: marker with labels, only marker without labels and only active marker with label. 3. Marker aligned exact with the frame line. It is slightly right of the frame line. Thanks.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Should be simple one, just clamp minimal coord :)%%%

%%%Should be simple one, just clamp minimal coord :)%%%

%%%Fixed in svn rev54382. Thanks for the report, closing :)%%%

%%%Fixed in svn rev54382. Thanks for the report, closing :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34165
No description provided.