Fix #34165: Disappearing active marker label in timeline window

Simply clamp label position from bottom.